# pdm-python

./: .customWords.txt  .dockerignore  .editorconfig  .gitignore  .ochrona.yml  .pre-commit-config.yaml  .secrets.baseline  .test.env  Dockerfile  LICENSE  Makefile  README.md  cspell.config.yaml  docker-compose-cache.json  docker-compose.yml  launch.py  noxfile.py  pdm.toml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pr-labels.yml  pull_request_template.md  repo-labels.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  pre-commit-auto-update.yml  triage.yml
src/pdm_python/: __main__.py  app.py
tests/: conftest.py  test_packaging.py
